--- a/index.html
+++ b/index.html
@@ -14,12 +14,17 @@
         <button onclick="change_grid('four')">4分</button>
         <button onclick="change_grid('eight')">8分</button>
         <button onclick="change_grid('sixteen')">16分</button>
+        拉伸音符<input type="checkbox" onchange="changeStretch(this)">
     </div>
     <canvas id="piano-roll" width="800" height="600"></canvas>
     <button onclick="deleteSelNote()">删除</button>
     <script>
         // todo：完成项目后换成testPlugin()这种风格命名变量和函数
+        const HANDLE_WIDTH = 8 // 拉伸手柄的宽度
+        var isNoteStretch = false
         var isMouseDown = false
+        var isStretching = false
+
         const canvas = document.getElementById('piano-roll');
         CanvasRenderingContext2D.prototype.drawLine = function(x1, y1, x2, y2) 
         {
@@ -80,11 +85,31 @@
                     ctx.fillStyle = "#ff0000"
                 }
                 ctx.fillRect(seq[i].x, seq[i].y, seq[i].width, seq[i].height)
+                if(isNoteStretch && selectedNoteIndex ==i)
+                {
+                    ctx.fillStyle = "#008800"
+                    ctx.fillRect(seq[i].x + seq[i].width - HANDLE_WIDTH/2, 
+                         seq[i].y + 2, 
+                         HANDLE_WIDTH, 
+                         seq[i].height - 4);
+                }
             }
             
         }
         function hit_test(x,y)
         {
+            // 如果启用了拉伸且有选中的音符，优先检查是否点击在手柄上
+            if (isNoteStretch && selectedNoteIndex >= 0) {
+                const note = seq[selectedNoteIndex];
+                // 检查是否点击在拉伸手柄上
+                if (x >= note.x + note.width - HANDLE_WIDTH/2 && 
+                    x <= note.x + note.width + HANDLE_WIDTH/2 &&
+                    y >= note.y && 
+                    y <= note.y + note.height) {
+                    // 点击在手柄上，不处理为音符点击
+                    return { hit: false, index: -1, note: null };
+                }
+            }
             // 从后往前检查，因为后绘制的音符在视觉上在顶层
             for (let i = seq.length - 1; i >= 0; i--) 
             {
@@ -96,6 +121,22 @@
                 }
             }
             return { hit: false, index: -1, note: null };
+        }
+        function hitTestHandle(x,y)
+        {
+            if(!isNoteStretch || selectedNoteIndex < 0)
+            {
+                return false;
+            }
+            const note = seq[selectedNoteIndex];
+            // 检查是否点击在拉伸手柄上（音符右边缘附近）
+            if (x >= note.x + note.width - HANDLE_WIDTH && 
+                x <= note.x + note.width + HANDLE_WIDTH/2 &&
+                y >= note.y && 
+                y <= note.y + note.height) {
+                return true;
+            }
+            return false;
         }
         function deleteSelNote()
         {
@@ -110,11 +151,18 @@
         canvas.addEventListener('mousedown', function(e) 
         {
             isMouseDown = true
+            isStretching = false
             const rect = canvas.getBoundingClientRect();
             const x = e.clientX - rect.left;
             const y = e.clientY - rect.top;
             mouseDownX = x
             mouseDownY = y
+            if(isNoteStretch && selectedNoteIndex>=0 && hitTestHandle(x,y))
+            {
+                isStretching = true
+                dragOffsetX = x - (seq[selectedNoteIndex].x + seq[selectedNoteIndex].width);
+                return
+            }
             // 检测按下的地方是否在音符内
             var hitResult = hit_test(x, y);
             if(hitResult && hitResult.hit)
@@ -144,25 +192,37 @@
             if(selectedNoteIndex >= 0 && isMouseDown)
             {
                 var gridSpace = all_note_width / grid
-                var adjustedX = x - dragOffsetX
-                var adjustedY = y - dragOffsetY
-                if(adjustedX < 0)
+                if(isStretching)
                 {
-                    adjustedX = 0
+                    var newWidth = x - seq[selectedNoteIndex].x + dragOffsetX
+                    // 确保音符宽度至少为一个网格单位
+                    newWidth = Math.max(gridSpace, snap(newWidth, gridSpace));
+                    seq[selectedNoteIndex].width = newWidth;
+                    redraw();
                 }
-                if(adjustedY < 0)
-                {
-                    adjustedY = 0
+                else{
+                    // 处理音符移动
+                    var adjustedX = x - dragOffsetX
+                    var adjustedY = y - dragOffsetY
+                    if(adjustedX < 0)
+                    {
+                        adjustedX = 0
+                    }
+                    if(adjustedY < 0)
+                    {
+                        adjustedY = 0
+                    }
+                    seq[selectedNoteIndex].x = snap(adjustedX,gridSpace)
+                    seq[selectedNoteIndex].y = snap(adjustedY,note_height)
+                    redraw();
                 }
-                seq[selectedNoteIndex].x = snap(adjustedX,gridSpace)
-                seq[selectedNoteIndex].y = snap(adjustedY,note_height)
-                redraw();
             }
             // console.log(isMouseDown)
         })
         canvas.addEventListener('mouseup', function(e) 
         {
             isMouseDown = false
+            isStretching = false
             redraw()
         });
         function change_grid(type)
@@ -191,6 +251,11 @@
                     break;
             }
             redraw()
+        }
+        function changeStretch(checkbox)
+        {
+            isNoteStretch = checkbox.checked
+            //console.log(isNoteStretch)
         }
     </script>
 </body>
